# cpp-code

./: CMakeLists.txt
src/: CMakeLists.txt
src/datastucture/linearlist/: sequenatiallist.cpp  sequenatiallist.h
src/linearlist/: CMakeLists.txt  sequenatiallist.cpp  sequenatiallist.h  singlelinkedlist.cpp  singlelinkedlist.h
